[package]
name = "librealsense-sys"
version = "0.1.0"
authors = ["Benjamin Hinchley <benjaminhinchley@gmail.com>"]
description = "FFI Bindings to librealsense"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.23"