[package]
name = "librealsense-sys"
version = "0.2.0"
authors = ["Benjamin Hinchley <benjaminhinchley@gmail.com>"]
description = "FFI Bindings to librealsense"
repository = "https://github.com/benhinchley/librealsense-sys"
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.23"